--- a/lesson-01/package.json
+++ b/lesson-01/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "faker": "^5.5.3",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "query-string": "^7.0.0"
   }
 }
